dialog add task fix scrollbar

--- a/board/dialog-add-task.css
+++ b/board/dialog-add-task.css
@@ -14,6 +14,8 @@
 }
 
 .dialog-add-task {
+  position: fixed;
+  transform: translate(-50%, -50%);
   border-radius: 30px;
   border: none;
   padding: 36px 66px 56px 36px;
